--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <!-- Import the component -->
     <!-- Use it like any other HTML element -->
-    <model-viewer src="assets/models/Astronaut.glb" alt="A 3D model of an astronaut" auto-rotate camera-controls shadow-intensity="1" ar ar-scale="fixed">
+    <model-viewer src="MIKAN/Mikan1.glb" alt="A 3D model of an astronaut" auto-rotate camera-controls shadow-intensity="1" ar ar-scale="fixed">
     </model-viewer>
 </body>
 
