--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html class="md" lang="ja">
 
 <head>
     <meta charset="UTF-8">
@@ -11,10 +11,10 @@
     <script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
 </head>
 
-<body>
+<body class="md-body">
     <!-- Import the component -->
     <!-- Use it like any other HTML element -->
-    <model-viewer src="assets/Mikan1.glb" alt="A 3D model of an astronaut" auto-rotate camera-controls
+    <model-viewer class="md-mv" src="assets/Mikan1.glb" alt="A 3D model of an astronaut" auto-rotate camera-controls
         shadow-intensity="1" ar ar-scale="fixed">
     </model-viewer>
 </body>
