threejsこぴぺしてみたやつ２

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
     <model-viewer class="md-mv" src="assets/Mikan1.glb" alt="A 3D model of an astronaut" auto-rotate camera-controls
         shadow-intensity="1" ar ar-scale="fixed">
     </model-viewer>
-
+    
+    <canvas id="myCanvas"></canvas>
     
 </body>
 
