ボタンの追加

--- a/top.html
+++ b/top.html
@@ -11,21 +11,30 @@
     <script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
 </head>
 
-<body>
-
-    <div id="wrapper">
+ <div id="wrapper">
         <nav id="global-navi">
             <ul class="menu">
                 <p>title</p>
             </ul>
         </nav>
     </div>
+
+<body>
+
+ <a href="#" class="btn-square">BACK</a>
+
+ <a href="" class="btn-tuika">カートに入れる</a>
    
-    <div class="foot">
-        <footer>
-          <p>(c)copy right</p>
-        </footer>
-      </div>
     
 </body>
+
+<!--
+   <div class="foot">
+    <footer>
+      <p>(c)copy right</p>
+    </footer>
+  </div> 
+-->
+
+
 </html>
