台形のやつ

--- a/top.html
+++ b/top.html
@@ -25,7 +25,11 @@
 
  <a href="" class="btn-tuika">カートに入れる</a>
    
-    
+<a href="" class="btn-cart">Cart</a>
+
+<a href="" class="btn-syousai">商品詳細</a>
+
+
 </body>
 
 <!--
