3D空間表示してみた。横幅合わせできないのかな。（スクロールするようになってる） 台形の白い線ずっと消えないなぜ。

--- a/index.html
+++ b/index.html
@@ -62,7 +62,13 @@
     </model-viewer>
 -->
   
-
+<!--
+   <div class="foot">
+    <footer>
+      <p>(c)copy right</p>
+    </footer>
+  </div> 
+-->
     
 </body>
 
