なんかいろいろ

--- a/top.html
+++ b/top.html
@@ -29,9 +29,25 @@
  <a href="" class="btn-tuika">カートに入れる</a>
    
  <div class="cart">
-    <a href="" class="btn-cart">Cart</a>
+    <a class="btn-cart">Cart</a>
     <div class="cart-body">
       <ul class="cart-list">
+        <li class="cart-item">
+          <img class="cart-img" src="images/sample.jpg" alt="商品画像">
+          <div class="cart-detail">
+            <h2 class="cart-title">商品名</h2>
+            <p class="cart-para">商品説明 商品説明 商品説明</p>
+            <input class="cart-input" type="number" value="1">
+          </div>
+        </li>
+        <li class="cart-item">
+          <img class="cart-img" src="images/sample.jpg" alt="商品画像">
+          <div class="cart-detail">
+            <h2 class="cart-title">商品名</h2>
+            <p class="cart-para">商品説明 商品説明 商品説明</p>
+            <input class="cart-input" type="number" value="1">
+          </div>
+        </li>
         <li class="cart-item">
           <img class="cart-img" src="images/sample.jpg" alt="商品画像">
           <div class="cart-detail">
