--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
     <script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/105/three.min.js"></script>
-    <script src="js/controls/OrbitControls.js"></script>
+    <script src="js/OrbitControls.js"></script>
 
 <script>
     // ページの読み込みを待つ
