--- a/top.html
+++ b/top.html
@@ -76,7 +76,21 @@
     </div>
   </div><!-- /.cart -->
 
- <a href="" class="btn-syousai">商品詳細</a>
+  <div class="description">
+    <a class="btn-description">商品詳細</a>
+    <div class="description-body">
+      <p>商品の値段</p>
+      <p>ここに商品の説明文が入ります。
+        ここに商品の説明文が入ります。
+        ここに商品の説明文が入ります。
+        ここに商品の説明文が入ります。
+        ここに商品の説明文が入ります。
+        ここに商品の説明文が入ります。
+        ここに商品の説明文が入ります。
+      </p>
+    </div>
+  </div><!--/.description-->
+
 </body>
 
 
