--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=l"/>
   <title>Document</title>
   <link rel="stylesheet" type="text/css" href="css/ress.min.css">
   <link rel="stylesheet" href="style.css">
