フォントをいじったりした

--- a/top.html
+++ b/top.html
@@ -24,7 +24,7 @@
 
  <div class="md-body"><canvas id="myCanvas"></canvas></div> 
 
- <a href="#" class="btn-square">BACK</a>
+ <a href="#" class="btn-Back">BACK</a>
 
  <a href="" class="btn-tuika">カートに入れる</a>
    
