今週の進捗。

--- a/top.html
+++ b/top.html
@@ -29,7 +29,7 @@
  <a href="" class="btn-tuika">カートに入れる</a>
    
  <div class="cart">
-    <a class="btn-cart">Cart</a>
+    <a class="btn-cart">カート</a>
     <div class="cart-body">
       <ul class="cart-list">
         <li class="cart-item">
@@ -79,8 +79,9 @@
   <div class="description">
     <a class="btn-description">商品詳細</a>
     <div class="description-body">
-      <p>商品の値段</p>
-      <p>ここに商品の説明文が入ります。
+      <h2 class="description-title">商品の名前</h2>
+      <h2 class="description-price">￥値段</h2>
+      <p class="description-para">ここに商品の説明文が入ります。
         ここに商品の説明文が入ります。
         ここに商品の説明文が入ります。
         ここに商品の説明文が入ります。
