幅のCSSを追記。

--- a/top.html
+++ b/top.html
@@ -24,7 +24,7 @@
       </nav>
   </div>
 
- <div class="md-body"><canvas id="myCanvas"></canvas></div> 
+ <div class="md-body"><canvas id="myCanvas" class="CG"></canvas></div> 
 
  <a href="#" class="btn-Back">BACK</a>
 
