カメラをコントロールするjsを追加

--- a/top.html
+++ b/top.html
@@ -13,6 +13,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
   <script src="js/controls/OrbitControls.js"></script>
   <script src="js/index.js"></script>
+  <script src="js/camera-controls.min.js"></script>
 </head>
 
 <body>
@@ -83,7 +84,8 @@
     <div class="description-body">
       <h2 class="description-title">商品の名前</h2>
       <h2 class="description-price">￥値段</h2>
-      <p class="description-para">ここに商品の説明文が入ります。
+      <p class="description-para">
+        ここに商品の説明文が入ります。
         ここに商品の説明文が入ります。
         ここに商品の説明文が入ります。
         ここに商品の説明文が入ります。
