--- a/top.html
+++ b/top.html
@@ -19,16 +19,18 @@
   <div id="wrapper">
       <nav id="global-navi">
           <ul class="menu">
-              <p>title</p>
+              <p>3D空間におけるショッピングサイト</p>
           </ul>
       </nav>
   </div>
 
  <div class="md-body"><canvas id="myCanvas" class="CG"></canvas></div> 
 
- <a href="#" class="btn-Back">BACK</a>
+ <a href="#" class="btn-Back">戻る</a>
 
- <a href="" class="btn-tuika">カートに入れる</a>
+ <a href="" class="btn-AR">AR</a>
+
+ <a href="" class="btn-tuika">カートに<br>入れる</a>
    
  <div class="cart">
     <a class="btn-cart">カート</a>
