AR機能を追加できたよ！！

--- a/top.html
+++ b/top.html
@@ -28,7 +28,27 @@
 
  <a href="#" class="btn-Back">戻る</a>
 
- <a href="" class="btn-AR">AR</a>
+ <div class="btn-AR">
+    <model-viewer
+      src="assets/MIKAN/Mikan2.glb"
+      alt="A 3D model of an astronaut"
+      auto-rotate
+      camera-controls
+      shadow-intensity="1"
+      ar
+      class="mv-css"
+      ar-scale="fixed"
+      interaction-prompt="none"
+      reveal="manual"
+    > 
+      <button
+          slot="ar-button"
+          class="mv-btn"
+        >
+       AR
+      </button>
+    </model-viewer>
+ </div>
 
  <a href="" class="btn-tuika">カートに<br>入れる</a>
    
