画像の変更と、カートの表記変更

--- a/top.html
+++ b/top.html
@@ -57,41 +57,33 @@
     <div class="cart-body">
       <ul class="cart-list">
         <li class="cart-item">
-          <img class="cart-img" src="images/sample.jpg" alt="商品画像">
+          <img class="cart-img" src="images/000.jpg" alt="商品画像">
           <div class="cart-detail">
-            <h2 class="cart-title">商品名</h2>
+            <h2 class="cart-title">いぬ</h2>
             <p class="cart-para">商品説明 商品説明 商品説明</p>
             <input class="cart-input" type="number" value="1">
           </div>
         </li>
         <li class="cart-item">
-          <img class="cart-img" src="images/sample.jpg" alt="商品画像">
+          <img class="cart-img" src="images/001.jpg" alt="商品画像">
           <div class="cart-detail">
-            <h2 class="cart-title">商品名</h2>
+            <h2 class="cart-title">りす</h2>
             <p class="cart-para">商品説明 商品説明 商品説明</p>
             <input class="cart-input" type="number" value="1">
           </div>
         </li>
         <li class="cart-item">
-          <img class="cart-img" src="images/sample.jpg" alt="商品画像">
+          <img class="cart-img" src="images/002.jpg" alt="商品画像">
           <div class="cart-detail">
-            <h2 class="cart-title">商品名</h2>
+            <h2 class="cart-title">たぬき</h2>
             <p class="cart-para">商品説明 商品説明 商品説明</p>
             <input class="cart-input" type="number" value="1">
           </div>
         </li>
         <li class="cart-item">
-          <img class="cart-img" src="images/sample.jpg" alt="商品画像">
+          <img class="cart-img" src="images/003.jpg" alt="商品画像">
           <div class="cart-detail">
-            <h2 class="cart-title">商品名</h2>
-            <p class="cart-para">商品説明 商品説明 商品説明</p>
-            <input class="cart-input" type="number" value="1">
-          </div>
-        </li>
-        <li class="cart-item">
-          <img class="cart-img" src="images/sample.jpg" alt="商品画像">
-          <div class="cart-detail">
-            <h2 class="cart-title">商品名</h2>
+            <h2 class="cart-title">ぶた</h2>
             <p class="cart-para">商品説明 商品説明 商品説明</p>
             <input class="cart-input" type="number" value="1">
           </div>
