--- a/top.html
+++ b/top.html
@@ -30,6 +30,7 @@
 
  <div class="btn-AR">
     <model-viewer
+      id="ARchange"
       src="assets/MIKAN/Mikan2.glb"
       alt="A 3D model of an astronaut"
       auto-rotate
