--- a/top.html
+++ b/top.html
@@ -26,7 +26,7 @@
 
  <div class="md-body"><canvas id="myCanvas" class="CG"></canvas></div> 
 
- <a href="#" class="btn-Back">戻</a>
+ <a href="#" class="btn-Back">戻る</a>
 
  <div class="btn-AR">
     <model-viewer
