--- a/top.html
+++ b/top.html
@@ -61,7 +61,7 @@
           <img class="cart-img" src="images/000.jpg" alt="商品画像">
           <div class="cart-detail">
             <h2 class="cart-title">いぬ</h2>
-            <p class="cart-para">商品説明 商品説明 商品説明</p>
+            <p class="cart-para">かわいい生き物</p>
             <input class="cart-input" type="number" value="1">
           </div>
         </li>
@@ -69,7 +69,7 @@
           <img class="cart-img" src="images/001.jpg" alt="商品画像">
           <div class="cart-detail">
             <h2 class="cart-title">りす</h2>
-            <p class="cart-para">商品説明 商品説明 商品説明</p>
+            <p class="cart-para">ほっぺにいっぱいため込んでる</p>
             <input class="cart-input" type="number" value="1">
           </div>
         </li>
@@ -77,7 +77,7 @@
           <img class="cart-img" src="images/002.jpg" alt="商品画像">
           <div class="cart-detail">
             <h2 class="cart-title">たぬき</h2>
-            <p class="cart-para">商品説明 商品説明 商品説明</p>
+            <p class="cart-para">にんげんを化かしては笑ってる</p>
             <input class="cart-input" type="number" value="1">
           </div>
         </li>
@@ -85,7 +85,7 @@
           <img class="cart-img" src="images/003.jpg" alt="商品画像">
           <div class="cart-detail">
             <h2 class="cart-title">ぶた</h2>
-            <p class="cart-para">商品説明 商品説明 商品説明</p>
+            <p class="cart-para">ぶーぶーぶーぶー</p>
             <input class="cart-input" type="number" value="1">
           </div>
         </li>
