--- a/index.html
+++ b/index.html
@@ -7,16 +7,32 @@
   <title>Document</title>
   <link rel="stylesheet" type="text/css" href="css/ress.min.css">
   <link rel="stylesheet" href="style.css">
-  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
-  <script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r120/three.min.js"></script>
-  <script src="js/controls/OrbitControls.js"></script>
-  <script src="js/camera-controls.min.js"></script>
-  <script src="js/index.js"></script>
 </head>
 
 <body>
   <img src="images/アプリトップ.jpg">
+
+  <div>
+    <p>3D空間における<br>ショッピングサイト</p>
+  </div>
+
+  <div class="door">
+
+  </div>
+
+  <div class="greeting">
+    <p>実際に店内を歩いているような感覚で買い物ができれば、家の中にいても買い物がもっと楽しくなるのではないか。そんな想いから作られた空間をお楽しみください。</p>
+
+    <p>※このサイトは架空のサイトであり、実際に商品を購入することはできません。</p>
+
+    <p>動作環境</p>
+
+    <p>Android最新版GoogleChrome
+      <br>AR表示は機能対応機種のみとなります
+    </p>
+  </div>
+
+
 </body>
 
 
