モデルお試し４

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>3D空間におけるショッピングサイト</title>
   <link rel="stylesheet" type="text/css" href="css/ress.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -17,7 +17,6 @@
   </div>
 
   <div class="door">
-
   </div>
 
   <div class="greeting">
@@ -31,7 +30,6 @@
       <br>AR表示は機能対応機種のみとなります
     </p>
   </div>
-
 
 </body>
 
