モデルお試し６

--- a/top.html
+++ b/top.html
@@ -19,7 +19,7 @@
   <div id="wrapper">
       <nav id="global-navi">
           <ul class="menu">
-              <p>ようこそ</p>
+              <p>ようこ</p>
           </ul>
       </nav>
   </div>
