--- a/top.html
+++ b/top.html
@@ -19,7 +19,7 @@
   <div id="wrapper">
       <nav id="global-navi">
           <ul class="menu">
-              <p>ようこそ</p>
+              <p>ようこ</p>
           </ul>
       </nav>
   </div>
@@ -33,7 +33,7 @@
     <div class="btn-AR">
       <model-viewer
         id="ARchange"
-        src="assets/MIKAN/Mikan2.glb"
+        src="assets/models/mamiko0.glb"
         alt="A 3D model of an astronaut"
         auto-rotate
         camera-controls
