最初の画面からリンク飛べるようになったよ

--- a/index.html
+++ b/index.html
@@ -10,16 +10,24 @@
 </head>
 
 <body>
-  <img src="images/アプリトップ.jpg">
+  <div class="top-page">
+    <img src="images/アプリトップ１.jpg">
 
-  <div>
+      <a href="https://furukawa318.github.io/mex-2020/top.html"> <p>Enter</p></a>
+
+  </div>
+  
+  <!-- <div>
     <p>3D空間における<br>ショッピングサイト</p>
-  </div>
+  </div> -->
 
-  <div class="door">
-  </div>
+  <!-- <div class="door">
+    <div class="enter">
+      Enter
+    </div>
+  </div> -->
 
-  <div class="greeting">
+  <!-- <div class="greeting">
     <p>実際に店内を歩いているような感覚で買い物ができれば、家の中にいても買い物がもっと楽しくなるのではないか。そんな想いから作られた空間をお楽しみください。</p>
 
     <p>※このサイトは架空のサイトであり、実際に商品を購入することはできません。</p>
@@ -29,7 +37,7 @@
     <p>Android最新版GoogleChrome
       <br>AR表示は機能対応機種のみとなります
     </p>
-  </div>
+  </div> -->
 
 </body>
 
